[package]
authors    =["Thor Kamphefner <thorck@pm.me>"]
description="""cryptography algorithms in Rust"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="tkcrypto"
repository ="https://github.com/thor314/tkcrypto"
version    ="0.1.0"

[dependencies]
# Error Handling
anyhow   ="1.0"
cipher = "0.4.3"
generic-array = "0.14.6"
secrecy = "0.8.0"
thiserror="1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] } 
typenum = "1.16.0"
zeroize = { version = "1.5.7", features = ["zeroize_derive"] }

# Common

[dev-dependencies]

## Bench ##
criterion = "0.4"
# iai = "0.1" # criterion alternative

## Testing utils
# arbitrary = { version = "1.1", features = ["derive"] } # see quickcheck
# test-log =  { version = "0.2", default-features = false, features = ["trace"] } 
# test-log = "0.2"        # log/tracing independent test-log consumer

# quickcheck = "1.0"      # lowkey proptest suite
# quickcheck_macros = "1" # derive 
# rstest = "0.16"         # testing convenience proc-macros

# [[test]]
# name = "integration"
# path = "tests/tests.rs"

[[bench]]
name = "bench"
harness = false
