[package]
authors    =["Thor Kamphefner <thorck@pm.me>"]
description="""cryptography algorithms in Rust"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="tkcrypto"
repository ="https://github.com/thor314/tkcrypto"
version    ="0.1.0"

[dependencies]
# Error Handling
# anyhow   ="1.0"
cfg-if       ="1.0.0"
cipher       ="0.4.3"
generic-array="0.14.6"
secrecy      ="0.8.0"
# thiserror="1.0"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] } 
typenum="1.16.0"
zeroize={ version="1.5.7", features=["zeroize_derive"] }

[features]
# Compile with portable SIMD acceleration
simd=[]
avx2=[]
sse2=[]

[dev-dependencies]
hex-literal="0.3.4"

## Bench ##
criterion="0.4"
# iai = "0.1" # criterion alternative

## Testing utils
# arbitrary = { version = "1.1", features = ["derive"] } # see quickcheck
# test-log =  { version = "0.2", default-features = false, features = ["trace"] } 
# test-log = "0.2"        # log/tracing independent test-log consumer

# quickcheck = "1.0"      # lowkey proptest suite
# quickcheck_macros = "1" # derive 
# rstest = "0.16"         # testing convenience proc-macros

[[test]]
name="chacha"
path="tests/chacha.rs"

[[bench]]
name   ="bench"
harness=false
