[package]
authors    =["Thor Kamphefner <thorck@pm.me>"]
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="chacha"
version    ="0.1.0"

[dependencies]
# Error Handling
# anyhow   ="1.0"
cfg-if       ="1.0.0"
cipher       ="0.4.3"
generic-array="1.0.0"
once_cell = "1.17.0"
secrecy      ="0.8.0"
# thiserror="1.0"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] } 
typenum="1.16.0"
zeroize={ version="1.5.7", features=["zeroize_derive"] }

[features]
# Compile with portable SIMD acceleration
simd=[]
avx2=[]
sse2=[]
neon=[]

[dev-dependencies]
hex-literal="0.4.1"

## Bench ##
criterion="0.5"
